docs/tests/syntax/bad/testfile-keyword1-1.cpp
void m() { fora (i = 0; 1; i++); }
